--- a/packages/seacas/scripts/exodus-3.py.in
+++ b/packages/seacas/scripts/exodus-3.py.in
@@ -361,33 +361,33 @@ class ex_init_params(Structure):
         number of model nodes
     num_edge : int
         number of model edges
-    num_edge_blk: int
+    num_edge_blk : int
         number of model edge blocks
-    num_face: int
+    num_face : int
         number of model faces
-    num_face_blk: int
+    num_face_blk : int
         number of model face blocks
-    num_elem: int
+    num_elem : int
         number of model elements
-    num_elem_blk: int
+    num_elem_blk : int
         number of model element blocks
-    num_node_sets: int
+    num_node_sets : int
         number of model node sets
-    num_edge_sets: int
+    num_edge_sets : int
         number of model edge sets
-    num_face_sets: int
+    num_face_sets : int
         number of model face sets
-    num_side_sets: int
+    num_side_sets : int
         number of model side sets
-    num_elem_sets: int
+    num_elem_sets : int
         number of model elem sets
-    num_node_maps: int
+    num_node_maps : int
         number of model node maps
-    num_edge_maps: int
+    num_edge_maps : int
         number of model edge maps
-    num_face_maps: int
+    num_face_maps : int
         number of model face maps
-    num_elem_maps: int
+    num_elem_maps : int
         number of model elem maps
     ```
     """
@@ -700,24 +700,24 @@ class exodus:
 
         Parameters
         ----------
-        title: string
+        title : string
             database title
-        num_dims: int
+        num_dims : int
             number of model dimensions
-        num_nodes: int
+        num_nodes : int
             number of model nodes
-        num_elems: int
+        num_elems : int
             number of model elements
-        num_blocks: int
+        num_blocks : int
             number of model element blocks
-        num_ns: int
+        num_ns : int
             number of model node sets
-        num_ss: int
+        num_ss : int
             number of model side sets
 
         Returns
         -------
-        status: bool
+        status : bool
             True = successful execution
 
         """
@@ -740,7 +740,7 @@ class exodus:
 
         Returns
         -------
-        qa_recs: <list<tuple[4]<string>>>
+        qa_recs : <list<tuple[4]<string>>>
         """
         return self.__ex_get_qa()
 
@@ -759,11 +759,11 @@ class exodus:
 
         Parameter
         ---------
-        qa_recs: <list<tuple[4]<string>>>
+        qa_recs : <list<tuple[4]<string>>>
 
         Returns
         ------
-        status: bool
+        status : bool
             True = successful execution
         """
         for rec in records:
@@ -841,7 +841,7 @@ class exodus:
         ```
         Parameters
         ----------
-        inp_file_name : string (optional)<string>
+        inp_file_name : string, optional
            Name of text file where info records corresponding to the Sierra input deck will be written
 
         Returns
@@ -907,10 +907,10 @@ class exodus:
         Returns
         -------
 
-            if array_type == 'ctype':
+            if array_type == 'ctype' :
               <list<c_double>>  time_vals
 
-            if array_type == 'numpy':
+            if array_type == 'numpy' :
               <np_array<double>>  time_vals
         """
         if self.numTimes.value == 0:
@@ -932,12 +932,15 @@ class exodus:
 
         Parameters
         ----------
-            <int>    time_step  time step index (1-based)
-            <float>  time_val   time value for this step
+        time_step : int
+            time step index (1-based)
+        time_val : float
+            time value for this step
 
         Returns
         -------
-            <bool>  status  True = successful execution
+        status : bool
+            True = successful execution
         """
         self.__ex_put_time(step, value)
         self.numTimes = c_int(self.__ex_inquire_int(ex_inquiry('EX_INQ_TIME')))
@@ -950,14 +953,14 @@ class exodus:
 
     def num_dimensions(self):
         """
-        get the number of model dimensions
+        get the number of model spatial dimensions
         ```
         num_dims = exo.num_dimensions()
         ```
 
         Returns
         -------
-            <int>  num_dims
+        num_dims : <int
         """
         return self.numDim.value
 
@@ -1008,7 +1011,7 @@ class exodus:
 
         Returns
         -------
-            <int>  num_nodes
+        num_nodes : int
         """
         return self.numNodes.value
 
@@ -1210,7 +1213,7 @@ class exodus:
 
         Returns
         -------
-              <int>  num_nvars
+        num_nvars :               <int> 
         """
         ndType = ex_entity_type('EX_NODAL')
         num = self.__ex_get_variable_param(ndType)
@@ -1227,7 +1230,7 @@ class exodus:
 
         Parameters
         ----------
-              <int>  num_nvars
+        num_nvars :               <int> 
 
         Returns
         -------
@@ -1350,7 +1353,7 @@ class exodus:
 
         Returns
         -------
-            <int>  num_elems
+        num_elems :             <int> 
         """
         return self.numElem.value
 
@@ -1484,7 +1487,7 @@ class exodus:
 
         Returns
         -------
-            <int>  num_elem_blks
+        num_elem_blks : int
         """
         return self.numElemBlk.value
 
@@ -1535,7 +1538,7 @@ class exodus:
 
         Returns
         -------
-            <string>  name
+        name : string
         """
         name = self.__ex_get_name(object_type, object_id)
         return name
@@ -1557,7 +1560,7 @@ class exodus:
 
         Returns
         -------
-            <string>  elem_blk_name
+        elem_blk_name : string
         """
         self.__ex_put_name(object_type, object_id, name)
 
@@ -1597,7 +1600,7 @@ class exodus:
 
         Parameters
         ----------
-            <int>           object_type
+          object_type :             <int> 
             <list<string>>  names
         """
 
@@ -1614,11 +1617,12 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
-            <string>  elem_blk_name
+        elem_blk_name : string
         """
         return self.__ex_get_name('EX_ELEM_BLOCK', object_id)
 
@@ -1633,8 +1637,9 @@ class exodus:
 
         Parameters
         ----------
-            <int>     elem_blk_id    element block *ID* (not *INDEX*)
-            <string>  elem_blk_name
+            elem_blk_id : int
+    element block *ID* (not *INDEX*)
+        elem_blk_name : string
         """
         self.__ex_put_name('EX_ELEM_BLOCK', object_id, name)
 
@@ -1685,7 +1690,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -1710,7 +1716,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>     elem_blk_id      element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <string>  elem_type        element type (all caps), e.g. 'HEX8'
             <int>     num_blk_elems    number of elements in the block
             <int>     num_elem_nodes   number of nodes per element
@@ -1768,7 +1775,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -1810,7 +1818,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>        elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <list<int>>  elem_conn    ordered list of node *INDICES* that
               define the connectivity of each
               element in the block; the list cycles
@@ -1898,7 +1907,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>          elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <list<float>>  elem_attrs     list of all attribute values for all
               elements in the block; the list
               cycles through all attributes of
@@ -1921,7 +1931,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>          elem_blk_id    element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <string>       elem_attr_name element attribute name
             <list<float>>  values         list of values for a single attribute
                                           on a element block.  List dimensions
@@ -1945,7 +1956,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -1965,7 +1977,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -1985,7 +1998,7 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+            elem_blk_id : int  element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -2005,7 +2018,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -2029,7 +2043,8 @@ class exodus:
 
         Parameters
         ----------
-            (optional) <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int, optional
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -2083,7 +2098,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>     elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <string>  evar_name    name of element variable
             <int>     time_step    1-based index of time step
 
@@ -2121,7 +2137,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>          elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <string>       evar_name    name of element variable
             <int>          time_step    1-based index of time step
             <list<float>>  evar_vals
@@ -2245,7 +2262,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>  elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
 
         Returns
         -------
@@ -2265,7 +2283,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>           elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <list<string>>  attr_names
 
         Returns
@@ -2306,7 +2325,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>     elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <string>  eprop_name
 
         Returns
@@ -2330,7 +2350,8 @@ class exodus:
 
         Parameters
         ----------
-            <int>     elem_blk_id  element block *ID* (not *INDEX*)
+        elem_blk_id : int
+            element block *ID* (not *INDEX*)
             <string>  eprop_name
             <int>     eprop_val
 
@@ -2630,7 +2651,8 @@ class exodus:
 
         Parameters
         ----------
-            (optional) <int>  node_set_id  node set *ID* (not *INDEX*)
+        node_set_id : int, optional
+            node set *ID* (not *INDEX*)
 
         Returns
         -------
@@ -2863,10 +2885,9 @@ class exodus:
         ----------
             <int>  node_set_id        node set *ID* (not *INDEX*)
             <int>  num_ns_nodes       number of nodes to be added to set
-            <int>  num_ns_dist_facts  (optional) number of distribution
-              factors (e.g. nodal 'weights') --
-              must be equal to zero or
-              num_ns_nodes
+        num_ns_dist_facts : int, optional
+            number of distribution factors (e.g. nodal 'weights') --
+            must be equal to zero or num_ns_nodes
         """
         if numSetDistFacts is None:
             numSetDistFacts = numSetNodes
@@ -3339,7 +3360,8 @@ class exodus:
 
         Parameters
         ----------
-            (optional) <int>  side_set_id  side set *ID* (not *INDEX*)
+        side_set_id : int, optional
+            side set *ID* (not *INDEX*)
 
         Returns
         -------
